# CLearn

./: CMakeLists.txt  README.md
chapter1/: a.out  checkEOF.c  copyFile.c  copyInputToOptput.c  countChar.c  countChar2.c  countCharArry36  countCharArry36.c  countMaxLine40  countMaxLine40.c  countMaxLine40_bak.c  countMaxLine40bak  fahrenheit.c  getchar.c  power  power.c  printEOF.c
